--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,10 @@ jobs:
       - checkout
       - run_make:
           label: Run e2e tests
-          target: start-e2e e2e-tests
+          target: start-e2e
+      - run_make:
+          label: Run e2e tests
+          target: e2e-tests
       - store_cypress_artifacts
   build:
     docker:
